# loky

./: .azure_pipeline.yml  .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .readthedocs.yml  .travis.yml  CHANGES.md  CITATION.cff  MANIFEST.in  README.md  README.rst  TODO.md  appveyor.yml  benchmark.py  dev-requirements.txt  inspect_fd_sem.py  launch_tests.sh  pyproject.toml  run_for_profiler.py  setup.cfg  setup.py  tox.ini
backend/: concurrent_pool.py  popen_exec.py  process.py  process_executor.py  reusable_pool.py  spawn.py
benchmark/: _long_import.py  benchmark_helpers.py  sleep_and_return.py
continuous_integration/: build_test_ext.sh  copy_loky.sh  install.sh  install_coverage_subprocess_pth.py  run_tests.sh  runtests.sh  test_script.sh
docs/: .gitignore  API.rst  Makefile  README.rst  conf.py  examples.rst  index.rst  requirements.txt
examples/: README.txt  cloudpickle_wrapper.py  deadlock_on_shutdown.py  deadlock_results.py  deadlock_timeout_shutdown.py  reuse_executor.py  reuseable_executor.py
loky/: __init__.py  _base.py  cloudpickle_wrapper.py  concurrent_pool.py  initializers.py  process_executor.py  reusable_executor.py  reusable_pool.py  reusable_thread_executor.py  thread.py  worker_id.py
tests/: _executor_mixin.py  _test_process_executor.py  conftest.py  script_helper.py  test_cloudpickle_wrapper.py  test_cpool.py  test_exec.py  test_futures.py  test_loky.py  test_loky_backend.py  test_loky_module.py  test_minimal_reproducer.py  test_missing_multiprocessing.py  test_process_exec.py  test_process_executor.py  test_process_executor_fork.py  test_process_executor_forkserver.py  test_process_executor_loky.py  test_process_executor_spawn.py  test_rpool.py  (+13 more)
(+64 files in other folders)
